Use NewObservableHandler
