# api/openapi-spec/swagger.json
@@ -1961,6 +1961,9 @@
           "type": "integer",
           "format": "int64"
         },
+        "observedGenerationHash": {
+          "type": "string"
+        },
         "phase": {
           "description": "Phase indicates the state this Vault cluster jumps in. Phase goes as one way as below:\n  Initial -\u003e Running",
           "type": "string"
@@ -3646,6 +3649,13 @@
         "affinity": {
           "description": "If specified, the pod's scheduling constraints",
           "$ref": "#/definitions/io.k8s.api.core.v1.Affinity"
+        },
+        "args": {
+          "description": "Arguments to the entrypoint. The docker image's CMD is used if this is not provided. Variable references $(VAR_NAME) are expanded using the container's environment. If a variable cannot be resolved, the reference in the input string will be unchanged. The $(VAR_NAME) syntax can be escaped with a double $$, ie: $$(VAR_NAME). Escaped references will never be expanded, regardless of whether the variable exists or not. Cannot be updated. More info: https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#running-a-command-in-a-shell",
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         },
         "env": {
           "description": "List of environment variables to set in the container. Cannot be updated.",
